.kube/app_manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy-proj
  labels:
    app: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: test-deploy-proj
          image: wackoobserver/test_deploy_proj:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
