.kube/app_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-deploy-proj
  labels:
    app: django-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: django-app
