.kube/app_manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-deploy-proj
  labels:
    app: django-app
spec:
  rules:
    - host: test-deploy-proj.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-deploy-proj
                port:
                  name: http
